# Multi-sellers-E-shopping-backend

./: README.md  pyproject.toml
addresses/: models.py
addresses/migrations/: 0001_initial.py
backend/: permissions.py  settings.py  urls.py
categories/: admin.py  models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_initial.py
order_details/: admin.py  models.py  serializers.py  urls.py  views.py
order_details/migrations/: 0001_initial.py  0002_initial.py  0003_orderdetails_total_amount.py
order_items/: admin.py  models.py  serializers.py  views.py
order_items/migrations/: 0001_initial.py  0002_initial.py  0003_rename_price_orderitems_price_per_unit_and_more.py  0004_orderitems_order_item_status.py  0005_alter_orderitems_quantity.py
products/: admin.py  models.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_initial.py  0002_products_quantity.py  0003_products_category.py  0004_alter_products_category.py  0005_remove_products_category.py  0006_products_category.py  0007_remove_products_category_products_category.py  0008_alter_products_category.py  0009_alter_products_category.py
store/: models.py  serializers.py  urls.py  views.py
store/migrations/: 0001_initial.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_customerorvendor_phone_number.py  0003_alter_customerorvendor_address.py
